# candyland

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  candyland_1072041.txt  candyland_1072826.txt  candyland_1073713.txt  candyland_1223192.txt  candyland_1223885.txt  candyland_1227071.txt  candyland_1228596.txt  go.mod  go.sum  index.html  install.ps1  install.sh  main.go  package-lock.json  package.json  ui_headless.go  ui_webview.go  vite.config.js
ci/: README.md  release.yml
internal/bus/: bus.go  bus_test.go  reactor_test.go
internal/comms/: comms.go  comms_integration_test.go
internal/conductor/: audit.go  audit_test.go  budget_cap_test.go  bus.go  bus_test.go  campaign.go  campaign_delivery_test.go  campaign_exec.go  campaign_exec_test.go  campaign_test.go  cancel_test.go  cascade_test.go  conductor.go  coordinator.go  coordinator_test.go  executor_claude.go  executor_scripted.go  fanout_test.go  feedback_delivery_test.go  git.go  git_test.go  helpers.go  helpers_test.go  planner.go  planner_test.go  proc_unix.go  proc_windows.go  quest.go  quest_exec.go  quest_exec_test.go  quest_terminal_test.go  quest_test.go  rehydrate_test.go  resilience.go  resilience_test.go  review_test.go  stubclaude_test.go  supervisor_agents_test.go  untruncated_output_test.go
internal/control/: control.go  control_test.go  spawn_unix.go  spawn_windows.go
internal/datadir/: datadir.go  datadir_test.go
internal/httpapi/: api.go  campaign_test.go  commsmcp.go  commsmcp_test.go  fs.go  fs_test.go  health.go  health_test.go  httpapi_test.go  quest_test.go  reference.go  reference_test.go  run_feedback_test.go  system.go  trace_test.go  workspaces.go
internal/run/: types.go
internal/spa/: spa.go
internal/version/: version.go
internal/winproc/: winproc_other.go  winproc_windows.go
scripts/: check-history.mjs  check-system.mjs  check-workspaces.mjs  e2e.mjs  release.sh  validate-diagrams.mjs  validate-flows.mjs  validate-layout.mjs  validate-runtime.mjs
src/: App.js  config.js  feedback.js  index.js  mode.js  theme.js  util.js
src/components/: AgentTerminal.js  CommandInput.js  ConfirmStopDialog.js  CopyPr.js  CopyReference.js  EditRunDialog.js  FilterBar.js  FolderPicker.js  MermaidDiagram.js  ModeToggle.js  PlanningFlow.js  Section.js  StatusBits.js  SystemModal.js  WorkspacesModal.js
src/dashboard/: CampaignWorkspace.js  Footer.js  Layout.js  Menu.js  Navbar.js  QuestWorkspace.js  Router.js  RunHost.js  RunSwitcher.js  RunWorkspace.js  WorkDetail.js  rollup.js
src/data/: api.js  commands.js  filters.js  fs.js  ooo.js  system.js
src/lib/: reference.js
src/meta/: run.js
src/mock/: run.js
src/pages/: Dashboard.js  HowItWorks.js  Tasks.js
src/panels/: AgentsPanel.js  AuditPanel.js  BoardPanel.js  SessionsPanel.js  TasksPanel.js
src/wizard/: NewRunWizard.js
