# The release genrules in BUILD.bazel shell out to the system Go + Zig toolchains
# (Zig cross-compiles the Windows webview binaries from Linux), so candyland needs
# no Bazel C/Go toolchain deps — this file just marks the repo a bzlmod module and
# Bazel orchestrates the per-target genrules.
module(name = "candyland", version = "0.1.0")
